# better-tinker

./: .gitignore  MANIFEST.in  README.md  build_binaries.py  cursor_implement_cursor_plans_with_cont.md  main.go  pyproject.toml
.cursor/plans/: tin-b9d6dbae.plan.md
better_tinker/: wrapper.py
better_tinker/bridge/: requirements.txt  server.py
bridge/: start_bridge.bat  start_bridge.ps1
internal/api/: types.go
internal/config/: keyring.go
internal/ui/: app.go  styles.go
internal/ui/views/: checkpoints.go  menu.go  runs.go  settings.go  usage.go
