[project]
name = "better-tinker"
version = "0.1.0"
description = "Tinker CLI wrapper and bridge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "tinker",
]

[project.scripts]
tinker = "better_tinker.wrapper:main"
tinker-bridge = "better_tinker.bridge.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["better_tinker"]

# Include the bin directory in the wheel
[tool.hatch.build.targets.wheel.force-include]
"better_tinker/bin" = "better_tinker/bin"

